# hypercache

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  api.md  design.md  eval-loops.md  quickstart.md
src/component_cache/: __init__.py  backends.py  core.py  decorators.py  keys.py  service.py  stores.py  types.py
src/hypercache/: __init__.py  _observer.py  core.py  decorators.py  keys.py  observer.py  service.py  stores.py  structured.py
src/nanocache/: __init__.py  core.py  decorators.py  service.py  stores.py
tests/: test_core.py  test_decorator_and_key_hardening.py  test_docs.py  test_key_collision.py  test_production_hardening.py  test_structured.py  test_structured_hardening.py  test_structured_pydantic.py
