[project]
name = "component-cache"
version = "0.1.0"
description = "Method-level exact-match caching for expensive Python components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["diskcache>=5.6.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/component_cache"]
