[project]
name = "hypercache"
version = "0.2.1"
description = "Explicit, persistent caching for expensive Python functions and methods"
authors = [{ name = "Gilad Rubin", email = "gilad.rubin@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cache", "caching", "memoization", "python", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["diskcache>=5.6.3"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5.0", "twine>=6.0.0"]

[project.urls]
Homepage = "https://github.com/gilad-rubin/hypercache"
Repository = "https://github.com/gilad-rubin/hypercache"
Issues = "https://github.com/gilad-rubin/hypercache/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/hypercache"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/CHANGELOG.md"]
